--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 				<!-- <span>or use your email for registration</span> -->
 				<input class="round" type="text" name="user-name" placeholder="Name" />
 				<input class="round" type="email" name="user-email" placeholder="Email" />
-				<input class="round" type="password" name="user-pass" placeholder="Password" />
+				<input class="round" type="text" name="city" placeholder="City" />
+				<input class="round" type="text" name="country" placeholder="Country" />
+				<!-- <input class="round" type="password" name="user-pass" placeholder="Password" /> -->
 				<button name="signup-btn">Sign Up</button>
 			</form>
 		</div>
@@ -35,10 +37,10 @@
 					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a> -->
 				</div>
 				<!-- <span>or use your account</span> -->
-				<input class="round" type="text" name="user-name" placeholder="Username" />
-				<input class="round" type="password" name="user-pass" placeholder="Password" />
+				<input class="round" type="text" name="useremail" placeholder="Email" />
+				<!-- <input class="round" type="password" name="user-pass" placeholder="Password" /> -->
 				<!-- <a href="#">Forgot your password?</a> -->
-				<button name="login-btn">Sign In</button>
+				<button name="login-btn" width="300px">Sign In</button>
 			</form>
 		</div>
 		<div class="overlay-container">
